--- a/10.29.md
+++ b/10.29.md
@@ -12,7 +12,7 @@ D：数据集 size
 
 > To extrapolate, we fit curves relating **benchmark performance** to the **reducible loss**.
 
-![image-20241029125819870](C:\Users\Singe\AppData\Roaming\Typora\typora-user-images\image-20241029125819870.png)
+![image-20241029125819870](./image/image1.png)
 
 - **BIG-Bench**：一个异构的语言建模数据集，包含许多具有挑战性的任务。任务的性能以标准化首选指标（NPM）表示。
 - **MMLU**：大规模多任务语言理解基准，包含GPT-4的性能结果。
