--- a/10.29.md
+++ b/10.29.md
@@ -1,6 +1,11 @@
 ### How predictable is language model benchmark performance
 
-大模型 Benchmark 表现的可预测性如何
+大模型 Benchmark 表现的可预测性如何，如何预测
+
+1. scaling law 估算 loss
+
+   Chinchilla scaling：
+
 $$
 L(N,D) = \frac{A}{N^\alpha}+\frac{B}{D^\beta}+E
 $$
@@ -10,14 +15,32 @@ N：模型 size
 
 D：数据集 size
 
+其余常数由实验得到。
+
+2. 拟合外推
+
 > To extrapolate, we fit curves relating **benchmark performance** to the **reducible loss**.
 
 ![image-20241029125819870](./image/image1.png)
+
+一些可能用到的拟合函数形式：
+
+![image-20241029143101968](C:\Users\Singe\AppData\Roaming\Typora\typora-user-images\image-20241029143101968.png)
+
+用到的数据集，任务多样全面，比较有挑战性
 
 - **BIG-Bench**：一个异构的语言建模数据集，包含许多具有挑战性的任务。任务的性能以标准化首选指标（NPM）表示。
 - **MMLU**：大规模多任务语言理解基准，包含GPT-4的性能结果。
 
 验证：用 back-testing 回测，评估模型性能的可预测性。
+
+> Overall, our work suggests compute scaling provides a promising basis to forecast AI capabilities in diverse benchmarks, 
+>
+> though predicting performance in specific tasks poses challenges.
+
+可预测性：计算规模可以预测总体性能，但不能很好地预测特定任务上的性能。
+
+![image-20241029143001916](C:\Users\Singe\AppData\Roaming\Typora\typora-user-images\image-20241029143001916.png)
 
 ### **Efficient Benchmarking (of Language Models)**
 
@@ -29,9 +52,11 @@ Decision Impact on Reliability(*DIoR*)
 
 ### 关注的问题
 
-#### 大模型Benchmark怎么更好设计
-
 #### 怎么预测大模型不同规模的性能
 
 1. scaling laws 估算 loss
 2. 拟合外推（loss <-> performance）
+
+#### 大模型Benchmark怎么更好设计
+
+2. 
