--- a/10.29.md
+++ b/10.29.md
@@ -1,6 +1,24 @@
+### 关注的问题
+
+#### 怎么预测大模型不同规模的性能
+
+1. scaling laws 估算 loss
+
+2. 拟合外推（loss <-> performance）
+
+   不同语言可能造成的影响，多语言 Benchmark
+
+   数据污染，训练算法
+
+#### 大模型Benchmark怎么更好设计
+
+1. 选择 DIoR 高的 Decision
+
+---
+
 ### How predictable is language model benchmark performance
 
-大模型 Benchmark 表现的可预测性如何，如何预测
+大模型 Benchmark 表现的可预测性如何，预测方法？
 
 1. scaling law 估算 loss
 
@@ -25,7 +43,7 @@ D：数据集 size
 
 一些可能用到的拟合函数形式：
 
-![image-20241029143101968](C:\Users\Singe\AppData\Roaming\Typora\typora-user-images\image-20241029143101968.png)
+![image-20241029213752811](C:\Users\IceySakura\AppData\Roaming\Typora\typora-user-images\image-20241029213752811.png)
 
 用到的数据集，任务多样全面，比较有挑战性
 
@@ -40,23 +58,19 @@ D：数据集 size
 
 可预测性：计算规模可以预测总体性能，但不能很好地预测特定任务上的性能。
 
-![image-20241029143001916](C:\Users\Singe\AppData\Roaming\Typora\typora-user-images\image-20241029143001916.png)
+![image-20241029213807682](C:\Users\IceySakura\AppData\Roaming\Typora\typora-user-images\image-20241029213807682.png)
 
 ### **Efficient Benchmarking (of Language Models)**
 
 讨论如何设计**高效**的 Benchmark
 
-computation-reliability trade-off
+computation-**reliability** trade-off
+
+> *Reliability* assesses the degree to which the evaluation answer remains **consistent** under different random decisions, 
+>
+> many of which are selections from the distribution of elements composing the benchmark.
+
+Decision 比如数据集的选择，数据的划分，不同的 Scenarios...
 
 Decision Impact on Reliability(*DIoR*)
 
-### 关注的问题
-
-#### 怎么预测大模型不同规模的性能
-
-1. scaling laws 估算 loss
-2. 拟合外推（loss <-> performance）
-
-#### 大模型Benchmark怎么更好设计
-
-2. 
