--- a/areport/11.5.md
+++ b/areport/11.5.md
@@ -76,6 +76,8 @@ motivation: meta-metric 的特殊性质
 | Task2   | 0.5    | 1      |
 | overall | 1.5    | 1.5    |
 
+*尝试复现到 openeval*
+
 ### Scaling law
 
 规模（模型、数据集） <-> 性能
