--- a/areport/11.26.md
+++ b/areport/11.26.md
@@ -20,29 +20,31 @@ $Y_{il} \in [0,1]$ 表示 l 在 i example 上的得分
 
 直接对每个 subscenario 等量随机采样，因此 $w_i = \frac{1}{|\hat{I_j}|}$。
 
+问题：测试结果依赖取样结果，稳定性差，尤其是在取样少的情况下。
+
 #### 2. 聚类
 
 改进取 $\hat{I_j}$ 的方式，不要随机采样。
 
 得到的代表性 examples，称为锚点 "anchor points"，或者说所谓母题。
 
-关键在于如何建立空间。
+聚类关键在于如何建立空间。
 
 如何评价两个 example 是否相近？
 
 ##### 2.1. 基于正确性的聚类（Correctness-based Clustering）
-motivation：一个模型在锚点 example 上正确 $\iff$ 它在该簇下其他 example 上是正确的。
+motivation：一个模型在锚点 example 上正确 $\iff$ 它在该簇下其他 example 上是正确的。（不同模型优势能力可能不同）
 
 考虑已有一个模型集合 $L_{tr}$ 完成了全部测试。
 
-用不同模型给出的正确性得分，作为一个 example 的不同维度。
+用不同模型给出的正确性得分，作为一个 example 的不同维度，$v_i=[Y_{i{l_1}},Y_{i{l_2}},...]$。
 
 然后跑 k-means 聚类，找到每个聚类中心最近的 example 作为锚点（anchor points）
 
-锚点组成 $\hat{I_j}$，每个锚点的权重 $w_i$ 是该锚点所在聚类中的例子数占总例子数的比例。
+锚点组成 $\hat{I_j}$，每个锚点的权重 $w_i$ 是该锚点所在聚类中的 example 数占总 example 数的比例。
 
 ##### 2.2. 基于项目反应理论（IRT）的聚类（IRT-based Clustering）
-motivation：心理测量学/教育学领域，IRT 模型，现代考试模型
+motivation：心理测量学领域，IRT 模型，现代考试模型
 
 假设每个 example 的答对概率取决于模型的潜在能力（$\theta$）和 example 的特性（$\alpha$ 和 $\beta$）。
 $ p_{il} = P(Y_{il} = 1 | \theta_l, \alpha_i, \beta_i) = \frac{1}{1 + \exp(-\alpha_i^\top \theta_l + \beta_i)} $
@@ -59,7 +61,7 @@ $\beta_i \in R$ 问题 i 的难度，bias
 
 梯度下降方法优化变分分布的参数，使证据下界（Evidence Lower Bound, ELBO）最大化。
 
-### 3. （先前）一些思考
+#### 3. （先前）一些思考
 
 不依赖已有模型测试结果，基于 example 本身的属性建立空间  $\alpha_i$？
 
