--- a/areport/11.12.md
+++ b/areport/11.12.md
@@ -15,6 +15,8 @@ Spark Max:
 正确： 97 错误： 49 正确率： 0.6643835616438356
 ```
 
+优化，分级，然后先粗筛再细筛（todo）
+
 遇到的问题：
 
 1. 可能不按照给定格式（只回答选项字母）响应，尤其是问题比较长的时候
@@ -23,8 +25,11 @@ Spark Max:
 4. 不同 api 的调用方式不一样，不方便做自动化
 5. 只能调 api，本地显存 4g 不太能够支持做本地推理
 6. 有些 api 比较贵
+7. 模型太少，没办法分级
 
 解决：
 
-1. 参考已有的评测代码，解决格式问题等
+1. 参考已有的评测代码，解决格式、自动化问题等
 2. 使用计算资源，部署本地模型进行推理
+3. 找更多的开源大模型
+
